# FLAME_framework

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/cfg/task_generation/: agent_config.yaml  pipeline_config.yaml
src/schemas/: __init__.py  area_schemas.py  capability_schemas.py  domain_schemas.py  io_utils.py  metadata_schemas.py  task_gen_io_utils.py  task_schemas.py
src/task_generation/: __init__.py  agentic_pipeline.py  dedup_utils.py  designer_agent.py  json_response_utils.py  output_writer.py  prompts.py  run_parallel_task_gen.sh  runner.py  verifier_agent.py
src/task_generation/blueprints/: blueprints.json
src/task_generation/sample_chapter_text_files/: chapter_001.txt
src/utils/: __init__.py  constants.py  model_client_utils.py
